Attempt at avoiding resizing on mobile

--- a/homeSection.css
+++ b/homeSection.css
@@ -131,6 +131,7 @@ div.portrait img {
         display: inline-block;
         width: 100%;
         height: calc(100vh - var(--navHeightMobile));
+        transition: none;
     }
 
     div.intro {
@@ -138,6 +139,7 @@ div.portrait img {
         align-items: center;
         margin: 0;
         height: 35%;
+        transition: none;
     }
 
     .home h1 {
@@ -148,6 +150,7 @@ div.portrait img {
         display: flex;
         font-size: 90px;
         text-align: center;
+        transition: none;
     }
 
     .home p {
@@ -155,6 +158,7 @@ div.portrait img {
         text-align: center;
         padding-left: 10%;
         padding-right: 10%;
+        transition: none;
     }
 
     .intro button {
@@ -164,6 +168,7 @@ div.portrait img {
     div.portrait {
         justify-content:center;
         height: 65%;
+        transition:none;
     }
 
     div.portrait img {
